# telegram_ias_timetable

./: .gitignore  Cargo.toml  README.md
python/: __main__.py  requirements.txt
python/commands/: __init__.py  help.py  start.py
python/keyboard/: auth.py  handler.py
src/: main.rs
