[package]
name = "telegram_bot"
version = "0.0.0"
authors = ["etteryand0 <etteryand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15.0"     
telegram-bot="0.8.0"
futures="0.3.9"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }